openshift/pipeline.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: debitos-tributarios
